@@ -13,11 +13,15 @@
     ],
     "require": {
         "php": ">=7.4",
-        "symfony/console": "^5.3",
-        "symfony/http-client": "^5.3"
+        "laravel-zero/phar-updater": "^1.1.1",
+        "symfony/console": "^4.4",
+        "symfony/http-client": "^4.4"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.3"
+    },
+    "conflict": {
+        "symfony/string": "*"
     },
     "config": {
         "preferred-install": "dist",
